{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 411,
  "lineage": "d7442623-4a7b-694e-b7e9-1f00bb2596cd",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "greendev",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "greendev-dev",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "environment": "dev",
                  "managed_by": "terraform",
                  "project": "greendev"
                },
                "name": "greendev-dev",
                "resource_version": "118335",
                "uid": "6bfe0e04-0fa7-4d2a-81bc-42998cd8fa22"
              }
            ],
            "wait_for_default_service_account": false
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "backend_policy",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "greendev-dev/backend-policy",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "backend-policy",
                "namespace": "greendev-dev",
                "resource_version": "118350",
                "uid": "e20eb3ae-6352-413a-8a6f-4481be9cb36d"
              }
            ],
            "spec": [
              {
                "egress": [
                  {
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "5432",
                        "protocol": "TCP"
                      }
                    ],
                    "to": [
                      {
                        "ip_block": [],
                        "namespace_selector": [],
                        "pod_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "app": "postgres"
                            }
                          }
                        ]
                      }
                    ]
                  }
                ],
                "ingress": [
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [],
                        "pod_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "app": "frontend"
                            }
                          }
                        ]
                      }
                    ],
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "3000",
                        "protocol": "TCP"
                      }
                    ]
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": {
                      "app": "backend"
                    }
                  }
                ],
                "policy_types": [
                  "Ingress",
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_namespace.greendev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "db_policy",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "greendev-dev/db-protection-policy",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "db-protection-policy",
                "namespace": "greendev-dev",
                "resource_version": "118343",
                "uid": "c5555d12-23c5-473d-9066-8a5b11ea2a68"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [],
                        "pod_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "app": "backend"
                            }
                          }
                        ]
                      }
                    ],
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "5432",
                        "protocol": "TCP"
                      }
                    ]
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": {
                      "app": "postgres"
                    }
                  }
                ],
                "policy_types": [
                  "Ingress",
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_namespace.greendev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "default_deny_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "greendev-dev/default-deny-all",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "default-deny-all",
                "namespace": "greendev-dev",
                "resource_version": "118351",
                "uid": "0b2b717f-9dab-4226-a4fe-44cc47645f1e"
              }
            ],
            "spec": [
              {
                "egress": [
                  {
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "53",
                        "protocol": "UDP"
                      },
                      {
                        "end_port": 0,
                        "port": "53",
                        "protocol": "TCP"
                      }
                    ],
                    "to": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "kubernetes.io/metadata.name": "kube-system"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ]
                  }
                ],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress",
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_namespace.greendev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "deny_cross_environment",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "greendev-dev/deny-cross-environment",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "deny-cross-environment",
                "namespace": "greendev-dev",
                "resource_version": "118338",
                "uid": "934e11d5-f2c8-479e-8a2e-2d037c1054c1"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "environment": "dev"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ],
                    "ports": []
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_namespace.greendev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "frontend_policy",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "greendev-dev/frontend-policy",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "frontend-policy",
                "namespace": "greendev-dev",
                "resource_version": "118352",
                "uid": "f10371f8-46f7-4e2a-8988-12da075e6752"
              }
            ],
            "spec": [
              {
                "egress": [
                  {
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "3000",
                        "protocol": "TCP"
                      }
                    ],
                    "to": [
                      {
                        "ip_block": [],
                        "namespace_selector": [],
                        "pod_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "app": "backend"
                            }
                          }
                        ]
                      }
                    ]
                  }
                ],
                "ingress": [
                  {
                    "from": [
                      {
                        "ip_block": [
                          {
                            "cidr": "10.0.0.0/16",
                            "except": null
                          }
                        ],
                        "namespace_selector": [],
                        "pod_selector": []
                      }
                    ],
                    "ports": [
                      {
                        "end_port": 0,
                        "port": "8080",
                        "protocol": "TCP"
                      }
                    ]
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": {
                      "app": "frontend"
                    }
                  }
                ],
                "policy_types": [
                  "Ingress",
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "dependencies": [
            "kubernetes_namespace.greendev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "greendev-dev/app",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "backend",
                  "managed_by": "terraform"
                },
                "name": "app",
                "namespace": "greendev-dev",
                "resource_version": "118358",
                "uid": "08f495e5-84e4-476c-a32e-f29e92497db0"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.105.232.131",
                "cluster_ips": [
                  "10.105.232.131"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 3000,
                    "protocol": "TCP",
                    "target_port": "3000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "backend"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace.greendev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "greendev-dev/db",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "postgres",
                  "managed_by": "terraform"
                },
                "name": "db",
                "namespace": "greendev-dev",
                "resource_version": "118341",
                "uid": "49a9644b-b29c-4ed1-930a-1e7d63bbe969"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.98.125.194",
                "cluster_ips": [
                  "10.98.125.194"
                ],
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 0,
                    "port": 5432,
                    "protocol": "TCP",
                    "target_port": "5432"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "postgres"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace.greendev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "greendev-dev/nginx-service",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "frontend",
                  "managed_by": "terraform"
                },
                "name": "nginx-service",
                "namespace": "greendev-dev",
                "resource_version": "118347",
                "uid": "7ae55a33-ba8c-4794-84ea-68cd24b92551"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "10.108.209.83",
                "cluster_ips": [
                  "10.108.209.83"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 30080,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "frontend"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "kubernetes_namespace.greendev"
          ]
        }
      ]
    }
  ]
}